Bug 99680 - Elements assinged to <shadow> should not be reprojected.
Summary: Elements assinged to <shadow> should not be reprojected.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on:
Blocks: 96986
  Show dependency treegraph
 
Reported: 2012-10-17 21:53 PDT by Shinya Kawanaka
Modified: 2012-10-19 09:56 PDT (History)
3 users (show)

See Also:


Attachments
Patch (6.44 KB, patch)
2012-10-17 22:20 PDT, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (11.65 KB, patch)
2012-10-18 21:41 PDT, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (9.65 KB, patch)
2012-10-18 22:20 PDT, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (8.53 KB, patch)
2012-10-18 22:21 PDT, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-10-17 21:53:34 PDT
In the current spec, we don't have shadow reprojection. Let's have a test case for it.
Comment 1 Shinya Kawanaka 2012-10-17 22:03:10 PDT
Ah we don't prohibit shadow reprojection now in the current implementation...
Comment 2 Shinya Kawanaka 2012-10-17 22:20:50 PDT
Created attachment 169345 [details]
Patch
Comment 3 WebKit Review Bot 2012-10-18 00:18:21 PDT
Comment on attachment 169345 [details]
Patch

Attachment 169345 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/14387901

New failing tests:
editing/shadow/breaking-editing-boundaries.html
Comment 4 Dimitri Glazkov (Google) 2012-10-18 08:57:16 PDT
Comment on attachment 169345 [details]
Patch

what's that test failure all about?
Comment 5 Shinya Kawanaka 2012-10-18 18:32:41 PDT
Hmm... I'll check it soon.
Comment 6 Shinya Kawanaka 2012-10-18 18:49:04 PDT
Oh... The test hits my bug. We cannot use multiple <shadow> in this implementation...
I have to fix it.
Comment 7 Shinya Kawanaka 2012-10-18 21:41:53 PDT
Created attachment 169545 [details]
Patch
Comment 8 Shinya Kawanaka 2012-10-18 22:12:07 PDT
Ah... This is still wrong in the current spec (W3C Editor's Draft 19 October 2012).

In the current spec, <content> can select <shadow> itself, but it cannot decompose the elements assigned to <shadow>.
Comment 9 Shinya Kawanaka 2012-10-18 22:20:42 PDT
Created attachment 169546 [details]
Patch
Comment 10 Shinya Kawanaka 2012-10-18 22:21:28 PDT
Created attachment 169547 [details]
Patch
Comment 11 WebKit Review Bot 2012-10-19 09:56:30 PDT
Comment on attachment 169547 [details]
Patch

Clearing flags on attachment: 169547

Committed r131910: <http://trac.webkit.org/changeset/131910>
Comment 12 WebKit Review Bot 2012-10-19 09:56:34 PDT
All reviewed patches have been landed.  Closing bug.