Elements assigned to <shadow> should not be reprojected. https://bugs.webkit.org/show_bug.cgi?id=99680

Reviewed by Dimitri Glazkov.

Source/WebCore:

In the current spec, we don't have shadow reprojection, i.e. elements assigned to <shadow> should not be
reprojected to content. However, we can select them by <shadow>.

Tests: fast/dom/shadow/content-reprojection-complex.html
       fast/dom/shadow/content-reprojection-shadow.html
       fast/dom/shadow/shadow-reprojection-prohibited.html

* html/shadow/ContentDistributor.cpp:
(WebCore::ContentDistributor::distribute): When a node is <shadow>, we should not add elements assigned to <shadow>
to POOL. Instead, <shadow> itself should be added to POOL.
* html/shadow/HTMLContentElement.h:
(WebCore::isHTMLContentElement):
(WebCore):

LayoutTests:

* fast/dom/shadow/content-reprojection-complex-expected.html: Added.
* fast/dom/shadow/content-reprojection-complex.html: Added.
* fast/dom/shadow/content-reprojection-shadow-expected.html: Added.
* fast/dom/shadow/content-reprojection-shadow.html: Added.
* fast/dom/shadow/shadow-reprojection-prohibited-expected.html: Added.
* fast/dom/shadow/shadow-reprojection-prohibited.html: Added.


Canonical link: https://commits.webkit.org/117846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131910 268f45cc-cd09-0410-ab3c-d52691b4dbfc